--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -33,7 +33,12 @@ force_try:
   severity: warning # explicitly
 # rules that have both warning and error levels, can set just the warning level
 # implicitly
-line_length: 120
+line_length:
+  warning: 120
+  error: 200
+  ignores_comments: true
+  ignores_urls: true
+function_body_length: 60
 # they can set both implicitly with an array
 type_body_length:
   - 300 # warning
